Removed apache commons io because screw them