@@ -5,10 +5,16 @@ import java.awt.Desktop;
 import java.awt.EventQueue;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileOutputStream;
+import java.io.FileReader;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.channels.Channels;
+import java.nio.channels.ReadableByteChannel;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -17,35 +23,33 @@ import javax.swing.JMenu;
 import javax.swing.JMenuBar;
 import javax.swing.JMenuItem;
 
-import org.apache.commons.io.FileUtils;
-
 public class JTest
 {
-	
+
 	public enum State
 	{
 		CLOSING, INITIALIZING, RUNNING;
 	}
-
+	
 	public static String		GITHUB_URI					= ("https://github.com");
-
+	
 	public static JTest			instance;
-	
+
 	public static String		ISSUES_URI					= ("https://github.com/Commador/JavaTest/issues");
-	
-	public static String		QUESTIONS_FILE_URI			= "questions.cfg";
 
+	public static String		QUESTIONS_FILE_LOCATIONS			= "questions.cfg";
+	
 	public static final String	QUESTIONS_FILE_URI_REMOTE	= "https://raw.githubusercontent.com/Commador/JavaTestQuestions/master/questions.cfg";
-	
-	public static String		SOURCE_URI					= ("https://github.com/Commador/JavaTest");
 
-	public static String		VERSION						= "1.0.0";
+	public static String		SOURCE_URI					= ("https://github.com/Commador/JavaTest");
 	
+	public static String		VERSION						= "1.0.0";
+
 	public static void exitAll()
 	{
 		System.exit(0);
 	}
-	
+
 	/**
 	 * Launch the application.
 	 */
@@ -66,7 +70,7 @@ public class JTest
 					e.printStackTrace();
 				}
 			}
-			
+
 			@Override
 			public void start()
 			{
@@ -75,13 +79,13 @@ public class JTest
 			}
 		});
 	}
-
-	public List<Question>	questions;
-
-	private JFrame			frame;
 	
-	private State			state;
+	public List<Question>	questions;
+	
+	private JFrame			frame;
 
+	private State			state;
+	
 	/**
 	 * Create the application.
 	 */
@@ -89,31 +93,43 @@ public class JTest
 	{
 		this.initialize();
 	}
-	
+
 	public void exit()
 	{
 		this.setState(State.CLOSING);
 		JTest.exitAll();
 	}
-	
+
 	public State getState()
 	{
 		return this.state;
 	}
-	
+
 	private List<Question> getQuestions() throws URISyntaxException,
-			IOException
+	IOException
 	{
 		final List<Question> questions = new ArrayList<Question>();
-		final File qfile = new File(new URI(JTest.QUESTIONS_FILE_URI));
+		final File qfile = new File(JTest.QUESTIONS_FILE_LOCATIONS);
 		if (!qfile.exists())
 		{
-			FileUtils.copyURLToFile(
-					new URI(JTest.QUESTIONS_FILE_URI_REMOTE).toURL(), qfile);
+			URL remote = new URL(QUESTIONS_FILE_URI_REMOTE);
+			ReadableByteChannel rbc = Channels.newChannel(remote.openStream());
+			FileOutputStream fos = new FileOutputStream(qfile);
+			fos.getChannel().transferFrom(rbc, 0, Long.MAX_VALUE);
+			rbc.close();
+			fos.close();
+		}
+		{
+			BufferedReader br = new BufferedReader(new FileReader(qfile));
+			String line;
+			while ((line = br.readLine()) != null) {
+				questions.add(new Question(line));
+			}
+			br.close();
 		}
 		return questions;
 	}
-	
+
 	/**
 	 * Initialize the contents of the frame.
 	 */
@@ -123,13 +139,13 @@ public class JTest
 		this.frame = new JFrame();
 		this.frame.setBounds(100, 100, 450, 300);
 		this.frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-
+		
 		final JMenuBar menuBar = new JMenuBar();
 		this.frame.getContentPane().add(menuBar, BorderLayout.NORTH);
-		
+
 		final JMenu menuJavaTest = new JMenu("JavaTest");
 		menuBar.add(menuJavaTest);
-		
+
 		final JMenuItem menuButtonExit = new JMenuItem("Exit");
 		menuButtonExit.addMouseListener(new MouseAdapter()
 		{
@@ -140,10 +156,10 @@ public class JTest
 			}
 		});
 		menuJavaTest.add(menuButtonExit);
-		
+
 		final JMenu menuHelp = new JMenu("Help");
 		menuBar.add(menuHelp);
-		
+
 		final JMenuItem menuButtonSource = new JMenuItem("Source");
 		menuButtonSource.addMouseListener(new MouseAdapter()
 		{
@@ -164,7 +180,7 @@ public class JTest
 				}
 			}
 		});
-		
+
 		final JMenuItem menuButtonGithub = new JMenuItem("Github");
 		menuButtonGithub.addMouseListener(new MouseAdapter()
 		{
@@ -187,7 +203,7 @@ public class JTest
 		});
 		menuHelp.add(menuButtonGithub);
 		menuHelp.add(menuButtonSource);
-		
+
 		final JMenuItem menuButtonIssues = new JMenuItem("Issues");
 		menuButtonIssues.addMouseListener(new MouseAdapter()
 		{
@@ -219,7 +235,7 @@ public class JTest
 		}
 		this.setState(State.RUNNING);
 	}
-	
+
 	private void setState(final State state)
 	{
 		this.state = state;
